--- a/local.env
+++ b/local.env
@@ -5,3 +5,7 @@ DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=root
 DATABASE_SYNC=true
 DATABASE_LOGGING=true
+
+# JWT
+JWT_KEY=thisisthekey
+JWT_EXPIRE=10800
